--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   register:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -14,9 +14,9 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: Setup python and poetry
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.9
+          python-version: 3.x
       - uses: Gr1N/setup-poetry@v4
 
       - name: Setup nodejs
